[package]
name = "noierrdev-tokenmill-swap-sample"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
axum = "0.8.1"
bincode = "1.3.3"
borsh = "1.5.3"
clap = "4.5.26"
dotenv = "0.15.0"
futures = "0.3.31"
hex = "0.4.3"
log = "0.4.22"
maplit = "1.0.2"
solana-client = "2.1.7"
solana-connection-cache = "2.1.10"
solana-sdk = "2.1.7"
solana-transaction-status = "2.1.7"
spl-associated-token-account = "6.0.0"
spl-token = "7.0.0"
spl-token-2022="7.0.0"
tokio = "1.43.0"
base64 = "0.21"
time = "0.3"
reqwest = "0.12.12"
serde_json = "1.0.135"
ruint = "1.15.0"